<resources>
    <string name="app_name">IUMusic</string>
    <string name="description">Music for You and I</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="music">Music</string>
    <string name="genre">Genre</string>
    <string name="time">00:00</string>
    <string name="search_title">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_myList">My List</string>
    <string name="action_search">Search</string>
</resources>
