<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music"
            android:title="@string/music" />
        <item
            android:id="@+id/nav_artist"
            android:title="@string/artist" />
        <item
            android:id="@+id/nav_album"
            android:title="@string/album" />
        <item
            android:id="@+id/nav_genre"
            android:title="@string/genre" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
