<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/listLayout">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        android:id="@+id/listImg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/listImg"
        android:layout_toEndOf="@+id/listImg">

        <TextView
            android:text="@string/title"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listTitle"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/album"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listAlbum"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/artist"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listArtist"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>