<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        card_view:cardBackgroundColor="@color/background"
        android:id="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/cardImg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/cardTitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/album"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/cardAlbum"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/artist"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/cardArtist"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>