<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/notiImg"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notiName" />

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notiTitle" />

        <TextView
            android:text="@string/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notiArtist" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_skip_previous_black_24dp"
                android:id="@+id/notiPrev"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_play_arrow_black_24dp"
                android:id="@+id/notiPlay"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_skip_next_black_24dp"
                android:id="@+id/notiNext"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close_black_24dp"
                android:id="@+id/imageButton4"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>