<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.kitkat.android.iumusic.activity.PlayActivity">

    <!--
        android:focusable="true" // 포커스가 있어야 텍스트가 흐름
        android:ellipsize="marquee" // 텍스트 흐르는 효과
        android:maxLine="1" 최대 표시 한줄
    -->

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imgPager"
        app:layout_constraintRight_toRightOf="@+id/imgPager"
        app:layout_constraintLeft_toLeftOf="@+id/imgPager" />

    <TextView
        android:text="@string/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/album"
        android:textSize="@dimen/album"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toRightOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="@+id/title" />

    <TextView
        android:text="@string/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/artist"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="@+id/album"
        app:layout_constraintLeft_toLeftOf="@+id/album"
        app:layout_constraintTop_toBottomOf="@+id/album"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_play_circle_outline_black_24dp"
        android:id="@+id/btnPlay"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        app:layout_constraintRight_toRightOf="@+id/tracker"
        app:layout_constraintLeft_toLeftOf="@+id/tracker" />

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tracker"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_skip_previous_black_24dp"
        android:id="@+id/btnPre"
        android:background="@color/background"
        app:layout_constraintRight_toLeftOf="@+id/btnPlay"
        app:layout_constraintLeft_toLeftOf="@+id/tracker"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_skip_next_black_24dp"
        android:id="@+id/btnNext"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tracker"
        app:layout_constraintLeft_toRightOf="@+id/btnPlay" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        app:layout_constraintLeft_toLeftOf="@+id/tracker"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/duration"
        app:layout_constraintRight_toRightOf="@+id/tracker"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tracker"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textSize="14sp"
        android:textColor="@color/black" />

    <android.support.v4.view.ViewPager
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:id="@+id/imgPager"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.19">

    </android.support.v4.view.ViewPager>
</android.support.constraint.ConstraintLayout>
